# simlcd

./: .gitignore  .gitmodules  .valgrindrc  CMakeLists.txt  README.md
conf/: simlcd.config
src/simlcd/: simlcd.c
src/simlcd/gameloop/: CMakeLists.txt  gameloop.c  gameloop.h
src/simlcd/helper/: confighelper.c  confighelper.h  dirhelper.c  dirhelper.h  parameters.c  parameters.h
